# starlosearch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  drizzle.config.ts  history.html  index.html  load-clerk.html  login.html  package-lock.json  package.json  search-result.html  tsconfig.json  webpack.config.js
.fleet/: run.json  settings.json
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md
.github/workflows/: build-deploy.yml  build.yml  codeql.yml  tests.yml
Assets/Errors/: 404_page.html  Errors.js  error.css
C++/: user_authentication.cpp
ISSUE_TEMPLATE/: bug-report.md  feature-request.md
Javascript/: autocomplete.js  chatbot.js  discordbot.js  elixe.js  login.js  redis.js  script.js  searchhistory.js  searchresult.js
Pages/: about.html  api-keys_access.html  api_reference.html  history.html  login.html  privacy-policy.html  products.html  starlo_translate.html  terms-of-service.html
Python/: flask.py
images/: Hanako.jfif
src/: LICENSE  README.md  auth.rs  main.rs
src/Rust/: .gitignore  Cargo.toml
src/Rust/.run/: Run.run.xml
src/Rust/Security/: Cargo.toml  authentication.rs  bruteForcePrevention.rs  clickjacking_prevention.rs  cors.rs  csrf_prevention.rs  ddos_prevention.rs  encryption.rs  error_handling.rs  hash.rs  hashing.rs  logging.rs  mitm_prevention.rs  rate_limiting.rs  security-config.rs  sql_inject_prevention.rs  xssPrevention.rs
src/Rust/auth/: auth.rs  error.rs  main.rs
src/Rust/src/: database.rs  db.surql  redis.rs
workflows/: build-deploy.yml  tests.yml
(+200 files in other folders)
