[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "=7.2"
tokio = { version = "1.34.0", features = ["macros", "sync", "time"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
thiserror = "1.0.50"
chrono = "0.4.31"
warp = "0.3.6"
rocket = "0.5.0"
crypto = "0.5.1"
ring = "0.16"
bcrypt = "0.15.0"
jwt = "0.16.0"
sodiumoxide = "0.2.7"
rusoto_core = "0.48.0"
rusoto_s3 = "0.45"
hyper = "0.14"
sqlx = {version = "0.5", default-features = false, features = ["runtime-async-std-rustls"]}
crypto-hash = "0.3.4"
iron = "0.6.1"
redis = "0.23.3"
surrealdb = "1.0.0"
rand = "0.8.5"
syn = "2.0.39"


[[bin]]
name = "rust"
path = "src/main.rs"